<resources>
    <string name="app_name">BucketDrops</string>
    <string name="str_add_drop">Add a drop</string>
    <string name="sans_serif_thin">sans-serif-thin</string>
    <string name="hint_et_drop">What is it?</string>
    <string name="str_add_it">Add It</string>
    <string name="action_most_time_left">Most Time Left</string>
    <string name="action_least_time_left">Least Time Left</string>
    <string name="action_complete">Complete</string>
    <string name="action_incomplete">Incomplete</string>
    <string name="action_add">Add</string>
    <string name="action_none">None</string>
    <string name="str_no_items">No Items To Display</string>
    <string name="notif_title">Achievement</string>
    <string name="notif_message">"You are nearing your goal "</string>
    <string name="notif_long_message">"Congratulations, You are on the verge of accomplishing your goal "</string>
    <string name="mark_completed">Mark Completed</string>
</resources>
