<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vivz="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:title="@string/action_add"
        vivz:showAsAction="always" />

    <item
        android:id="@+id/action_sort_none"
        android:title="@string/action_none" />
    <item
        android:id="@+id/action_sort_descending_date"
        android:title="@string/action_most_time_left" />
    <item
        android:id="@+id/action_sort_ascending_date"
        android:title="@string/action_least_time_left" />
    <item
        android:id="@+id/action_show_complete"
        android:title="@string/action_complete" />
    <item
        android:id="@+id/action_show_incomplete"
        android:title="@string/action_incomplete" />
</menu>